# llmops-aks-platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  agent.py  config.py  main.py
app/guardrails/: input_guard.py  output_guard.py
app/llm/: client.py
app/observability/: metrics.py
app/pii/: tokenizer.py  vault.py
app/rag/: ingest.py  retriever.py  store.py
app/registry/: loader.py
app/registry/prompts/: answer_generation.yaml  eval_judge.yaml
data/corpus/: 01_depreciation_policy.md  02_expense_reimbursement.md  03_client_engagement_letter.md  04_revenue_recognition.md  05_retention_schedule.md
deploy/: ama-metrics-config.yaml  kind-config.yaml
deploy/base/: deployment.yaml  hpa.yaml  service.yaml
deploy/local-observability/: docker-compose.yml  prometheus.yml
deploy/overlays/centralus/: internal-lb.yaml  kustomization.yaml  region-config.yaml  serviceaccount.yaml
deploy/overlays/dev/: kustomization.yaml
deploy/overlays/eastus2/: internal-lb.yaml  kustomization.yaml  region-config.yaml  serviceaccount.yaml
deploy/overlays/prod/: internal-lb.yaml  kustomization.yaml
eval/: judge.py  run_eval.py  thresholds.yaml
eval/golden/: qa_set.yaml
infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra-dr/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: gen_traffic.py  smoke_foundry.py  smoke_kind.sh
tests/: test_api.py  test_config.py  test_eval_gate.py  test_guardrails.py  test_observability.py  test_pii.py  test_rag.py  test_registry.py
(+55 files in other folders)
